# TelAvivU

./: CMakeLists.txt  README.md  a.out  guiLauncher.py  hello_thrust.cu  solverToFortran.yaml  testRun
FortranTest/: CMakeLists.txt  main.f90
data from Yuri/: I saved data from MATLAB.txt
samples/: expectedResult.txt  mapBinaryToText.py  mapTextToBinary.py
shroud_project/: solverToFortran.json  solverToFortran.yaml  typesFortranBindings.h  utilFortranBindings.cpp  wrapFortranBindings.cpp  wrapFortranBindings.h  wrapffortranbindings.f  wrapffortranbindings.f90
src/: Algorithms  BiCGSTAB.cu  Event.cu  Event.h  FortranBindings.hpp  PoissonFDM.cu  Singleton.cu  algorithms.cu  deviceArray1D.cu  deviceArray2D.cu  deviceArrays  deviceArrays.cpp  deviceArrays.cu  deviceArrays.h  eigendecomp_interface.f90  main.cu  testMethods.cu
src/BiCGSTAB/: BiCGSTAB.cu  Event.cu  Event.h  RunDirectSolver.cu
src/Poisson/: CubeBoundary.cu  CubeBoundary.h  DirectSolver.cu  DirectSolver.cuh  EigenDecompSolver.cu  EigenDecompSolver.h  FastDiagonalization.cu  FastDiagonalizationMethod.cu  FortranBindings.cu  GridDim.cpp  GridDim.h  Poisson.cu  Poisson.h  PoissonRHS.h
src/deviceArrays/: DeviceMemory.cpp  DeviceMemory.h  Mat.cu  Singleton.cu  Tensor.cu  Vec.cu  deviceArrays.cu  deviceArrays.h
src/deviceArrays/defFiles/: BandedMatrix.cu  DeviceData.cu  DeviceData2d.cu  GpuArray.cu  GridDim.cu  KernelPrep.cu  Mat.cu  Singleton.cu  SquareMat.cu  Tensor.cu  Vec.cu  deviceArrays.cu  handle.cu  streamHelper.cpp
src/deviceArrays/headers/: BandedMat.h  DeviceData.cuh  DeviceData2d.cuh  GPUArray.h  GpuArray.h  GridDim.cuh  GridDim.h  GridDim.hpp  KernelPrep.cuh  KernelSupport.cuh  Mat.h  SquareMat.h  Tensor.h  Vec.h  bandedMat.h  deviceArrays.h  handle.h  squareMat.h  vec.h
src/math/: Real3d.cpp  Real3d.h
src/poisson/: CubeBoundary.cu  CubeBoundary.h  DirectSolver.cu  DirectSolver.cuh  PoissonRHS.cu  PoissonRHS.h  ToeplitzLaplacian.cpp  ToeplitzLaplacian.cu  ToeplitzLaplacian.cuh  ToeplitzLaplacian.h
src/solvers/: BiCGSTAB.cu  BiCGSTAB.cuh  EigenDecompSolver.cu  EigenDecompSolver.h  Event.cu
